fix graphic overflow

--- a/src/components/graphicInformation/GraphicInformation.scss
+++ b/src/components/graphicInformation/GraphicInformation.scss
@@ -5,23 +5,17 @@
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 15px;
   margin: 15px 0;
+  box-sizing: border-box;
 
-  .graphicItem {
+  .graphicItem { 
     background-color: #ffffff;
     color: #67748e;
     border-radius: 4px;
+    padding: 15px 30px 30px 30px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
     height: 100%;
-    width: 100%;
     box-sizing: border-box;
-    padding: 15px 30px 30px 30px;
-  }
-
-  .graph1 {
-    margin: 15px 15px 15px 0px;
-  }
-  .graph2 {
-    margin: 15px 0px 15px 15px;
+    overflow: hidden;
   }
 }
 
